# chato-smart-parking

./: .gitignore  00-START-HERE.md  ADDITIONAL_PERFORMANCE_FIXES.md  BUILD_FIXES.md  BUILD_GUIDE.md  BUILD_IN_PROGRESS.md  BUILD_SUMMARY.md  BUILD_TARGETS.md  COMPLETE_INSTALLER_BUILD_GUIDE.md  COMPLETE_INTEGRATION_GUIDE.ps1  COMPLETE_PERFORMANCE_GUIDE.md  DEPLOYMENT_GUIDE.md  DESKTOP_APP_SETUP_GUIDE.md  EXIT_PRICING_DISPLAY_FIXES.md  HOW_TO_FIX_VIDEO_STREAM.md  IMPLEMENTATION_CHECKLIST.md  INSTALLATION_FIX.md  PERFORMANCE_OPTIMIZATION_REPORT.md  PRICING_INTEGRATION_SUMMARY.md  PRICING_VEHICLE_TYPE_FIXES.md  QUICK_DEPLOYMENT.md  QUICK_START.md  SMART_PARKING_DETECTION_SUMMARY.md  VEHICLE_DETECTION_COMPLETE.md  WINDOWS_BUILD_NOTES.md  find-camera.sh  next.config.mjs  package-lock.json  package.json  pnpm-lock.yaml  quick-build.ps1  test-camera.sh  test-detection-system.ps1  test-detection-system.sh
app/: globals.css  layout.tsx  page.tsx
components/: auth-provider.tsx  language-provider.tsx
contexts/: detection-context.tsx
docs/: ZKTECO_CAMERA_INTEGRATION.md
smart-parking-front/src-tauri/: Cargo.toml  DOWNLOAD_VC_REDIST.md  installer.nsh  tauri.conf.json
smart-parking-front/src-tauri/resources/: README.md  version.txt
smart-parking-front/src-tauri/resources/backend/bootstrap/cache/: packages.php  services.php
smart-parking-front/src-tauri/scripts/: download-vcredist.ps1  prebuild-check-vcredist.js
smart-parking-front/src-tauri/src/: lib.rs  main.rs  printer.rs  serial.rs
smart-parking-front/src-tauri/src/commands/: gate.rs  mod.rs  printer.rs
(+233 files in other folders)
